fixed search bar resizing on mobile devices

--- a/src/components/searchbar/Searchbar.css
+++ b/src/components/searchbar/Searchbar.css
@@ -2,13 +2,17 @@
   border: none;
   font-family: inherit;
   font-size: 1.2rem;
-  height: 35px;
   border-radius: 0.5rem;
   text-align: center;
   color: #EEEEEE;
   background-color: #222831;
-  margin: 0 0.5rem 0 0.5rem;
   padding: 0.2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 250px;
+  max-width: 100%;
+  margin: 0 auto;
 }
 
 .search-bar input::placeholder{
